<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="105dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="175dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="sendMessage" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="250dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="325dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="sendMessage" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_marginTop="400dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        style="?android:attr/borderlessButtonStyle"
        android:background="#006699"
        android:textColor="#FFFFFF"
        android:onClick="sendMessage" />



</RelativeLayout>
